--- a/components/Hero.module.scss
+++ b/components/Hero.module.scss
@@ -11,44 +11,10 @@
   .heroDetails {
     margin-top: 50px;
     font-weight: 500;
-  }
-
-  .moon {
+    max-width: 385px;
+    text-align: center;
     margin-left: auto;
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem;
-    color: #333;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    position: absolute;
-    right: 25px;
-    max-height: 0;
-    overflow: hidden;
-    padding: 0;
-  }
-
-  .sun {
-    margin-left: auto;
-    background-color: transparent;
-    border: none;
-    font-size: 1.5rem;
-    color: #333;
-    visibility: hidden;
-    opacity: 0;
-    transition: opacity 0.5s ease-in-out;
-    position: absolute;
-    right: 25px;
-    color: #fff;
-    padding: 0;
-  }
-
-  .appear {
-    visibility: visible;
-    opacity: 1;
-    transition: opacity 0.5s ease-in-out;
-    max-height: 25px;
+    margin-right: auto;
   }
 
   .heroImg {
@@ -66,11 +32,10 @@
     font-size: 2.2rem;
     font-weight: 700;
     color: $primary;
-    margin-bottom: 8px;
+    margin-bottom: 24px;
   }
 
   .lead {
-    text-align: left;
     margin-bottom: 30px;
     font-size: 1.1rem;
   }
